иконки для формы

--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -76,7 +76,7 @@
 
   color: inherit;
 
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Tahoma", sans-serif;
 
   @include regular-text(700);
 }
