--- a/source/sass/blocks/heading.scss
+++ b/source/sass/blocks/heading.scss
@@ -1,5 +1,5 @@
 .heading {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Tahoma", sans-serif;
   font-style: normal;
   text-transform: uppercase;
 
