--- a/source/sass/blocks/interested.scss
+++ b/source/sass/blocks/interested.scss
@@ -1,5 +1,5 @@
 .interested {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Tahoma", sans-serif;
 
   text-transform: uppercase;
   padding: 38px 18px 49px;
