--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -100,7 +100,7 @@
 }
 
 .nav__list {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Tahoma", sans-serif;
   font-style: normal;
 
   @include big-text(700);
@@ -127,6 +127,30 @@
 
   @media (min-width: $desktop-width) {
     margin-right: 10rem;
+  }
+}
+
+.nav__list:last-child {
+  position: relative;
+}
+
+.nav__list:last-child::after {
+  position: absolute;
+
+  content: "";
+  width: 100%;
+  height: 7px;
+  left: 0px;
+  top: 213px;
+
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.2) 100%
+  );
+
+  @media (min-width: $tablet-width) {
+    background: none;
   }
 }
 
