--- a/source/sass/common/fonts.scss
+++ b/source/sass/common/fonts.scss
@@ -3,7 +3,8 @@
   font-weight: 400;
   font-style: normal;
 
-  src: url("../fonts/ptsans.woff") format("woff"), url("../fonts/ptsans.woff2") format("woff2");
+  src: url("../fonts/ptsans.woff") format("woff"),
+    url("../fonts/ptsans.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -12,6 +13,7 @@
   font-weight: 700;
   font-style: normal;
 
-  src: url("../fonts/ptsansbold.woff") format("woff"), url("../fonts/ptsansbold.woff2") format("woff2");
+  src: url("../fonts/ptsansbold.woff") format("woff"),
+    url("../fonts/ptsansbold.woff2") format("woff2");
   font-display: swap;
 }
