--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -4,7 +4,7 @@
 }
 
 .footer__wrapper {
-  padding: 25px 77px;
+  padding: 40px 77px;
 
   display: flex;
   flex-direction: column;
@@ -12,6 +12,12 @@
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
+
+    padding: 37px 28px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 37px 88px;
   }
 }
 
@@ -29,4 +35,18 @@
 
   text-transform: uppercase;
   color: inherit;
+}
+
+.footer__copyright-wrapper {
+  margin: 39px 0 0 4px;
+
+  @media (min-width: $tablet-width) {
+    margin: 2px 10px 0 -14px;
+  }
+
+  &--catalog {
+    @media (min-width: $tablet-width) {
+      margin: 5px -5px 0 5px;
+    }
+  }
 }
