--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -34,8 +34,8 @@
 
 .nav__toggle {
   position: absolute;
-  right: 17px;
-  top: 17px;
+  right: 18px;
+  top: 16px;
   z-index: 2;
   display: block;
   width: 23px;
@@ -60,8 +60,8 @@
 .nav--closed .nav__toggle::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 1px;
+  left: -3px;
   width: 23px;
   height: 4px;
   background-color: #81b3b2;
@@ -115,33 +115,35 @@
     font-size: 14px;
     line-height: 21px;
 
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 1fr 20% 1fr 1fr;
   }
 }
 
-.nav__list:nth-child(2) {
+.nav__list .nav__item:nth-child(3) {
   @media (min-width: $tablet-width) {
-    margin-right: 5rem;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-right: 10rem;
+    grid-column: 4 / 5;
   }
 }
 
-.nav__list:last-child {
+.nav__list .nav__item:nth-child(7) {
+  @media (min-width: $tablet-width) {
+    grid-column: 4 / 5;
+  }
+}
+
+.nav__list .nav__item:last-child {
   position: relative;
 }
 
-.nav__list:last-child::after {
+.nav__list .nav__item:last-child::after {
   position: absolute;
 
   content: "";
   width: 100%;
   height: 7px;
   left: 0;
-  top: 213px;
+  bottom: 0;
 
   background: linear-gradient(
     180deg,
@@ -155,7 +157,7 @@
 }
 
 .nav__item {
-  min-height: 55px;
+  min-height: 56px;
 
   @include flex-center(row);
 
