--- a/source/sass/blocks/presentation.scss
+++ b/source/sass/blocks/presentation.scss
@@ -6,29 +6,41 @@
 
   min-height: 350px;
 
-  margin: 20px;
+  margin: -27px 20px;
 
   @media (min-width: $tablet-width) {
-    margin: 60px;
+    margin: 60px 60px 38px;
   }
 
   @media (min-width: $desktop-width) {
-    margin: 0 200px;
+    margin: 61px 200px 82px;
   }
 }
 
 .presentation__title {
   @include big-text(700);
 
-  margin: 30px 0;
+  margin: 0 0 30px;
+
+  @media (min-width: $tablet-width) {
+    @include gigantic-text(700);
+  }
 }
 
 .presentation__description {
   @include regular-text(400);
 
-  margin: 0 0 40px;
+  margin: 0 10px 38px;
 
   color: #333333;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 97px 90px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 174px 90px;
+  }
 }
 
 .presentation__img-wrapper {
