--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -44,7 +44,7 @@
     margin: 2px 10px 0 -14px;
   }
 
-  &--catalog {
+  &--alt {
     @media (min-width: $tablet-width) {
       margin: 5px -5px 0 5px;
     }
