--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -6,18 +6,43 @@
 .form__heading {
   @include big-text(700);
 
-  margin: 0 0 40px;
-  padding: 24px 0 0;
+  overflow-wrap: break-word;
+
+  margin: 0;
+  padding: 22px 0 0;
 
   text-transform: uppercase;
 
   background-color: #ffffff;
 
   @media (min-width: $tablet-width) {
+    @include huge-text(700);
+
     position: relative;
 
     z-index: 1;
-    padding: 0 50px;
+
+    max-width: 420px;
+  }
+}
+
+.form__submit {
+  text-align: end;
+  margin-bottom: 17px;
+
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 63px;
+
+    flex-direction: row;
+    align-items: baseline;
+    gap: 166px;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 225px;
   }
 }
 
@@ -26,4 +51,37 @@
 
   color: #ffffff;
   background-color: #81b3d2;
+
+  padding: 16px 49px;
+  margin-top: 48px;
+
+  @media (min-width: $tablet-width) {
+    padding: 16px 70px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 16px 101px;
+
+    margin-top: 55px;
+  }
+
+  &:hover {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    background-color: #5496bd;
+    color: #ffffff4d;
+  }
+
+  &:disabled {
+    background-color: #e5e5e5;
+  }
+}
+
+.form__note {
+  @media (min-width: $tablet-width) {
+    @include regular-text(400);
+    text-transform: uppercase;
+  }
 }
