--- a/source/sass/blocks/list-icon.scss
+++ b/source/sass/blocks/list-icon.scss
@@ -41,7 +41,6 @@
   grid-column: 2 / 3;
 
   display: grid;
-  grid-template-rows: 1fr 60%;
   row-gap: 16px;
 
   position: relative;
@@ -61,18 +60,20 @@
   &--hotels {
     @media (min-width: $tablet-width) {
       row-gap: 25px;
-      padding-top: 116px;
+      padding-top: 150px;
+      padding-bottom: 55px;
     }
 
     @media (min-width: $desktop-width) {
-      padding-top: 120px;
+      padding-top: 150px;
     }
   }
 
   &--food {
     @media (min-width: $tablet-width) {
       row-gap: 22px;
-      padding-top: 112px;
+      padding-top: 150px;
+      padding-bottom: 55px;
     }
 
     @media (min-width: $desktop-width) {
@@ -83,7 +84,8 @@
   &--souvenirs {
     @media (min-width: $tablet-width) {
       row-gap: 23px;
-      padding-top: 105px;
+      padding-top: 150px;
+      padding-bottom: 64px;
     }
 
     @media (min-width: $desktop-width) {
