--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -30,6 +30,10 @@
 .nav--opened .nav__wrapper {
   position: absolute;
   width: 100%;
+
+  @media (min-width: $tablet-width) {
+    position: static;
+  }
 }
 
 .nav__toggle {
@@ -170,8 +174,39 @@
 
 .nav__link {
   color: #ffffff;
+  width: 100%;
+  height: 56px;
+
+  @include flex-center(row);
 
   @media (min-width: $tablet-width) {
     color: #000000;
+  }
+
+  &--current {
+    @media (min-width: $tablet-width) {
+      color: #766357;
+    }
+  }
+
+  &:hover {
+    background-color: #669ec0;
+
+    @media (min-width: $tablet-width) {
+      background-color: transparent;
+
+      color: #81b3d2;
+    }
+  }
+
+  &:active {
+    background-color: #5496bd;
+    color: #ffffff4d;
+
+    @media (min-width: $tablet-width) {
+      background-color: transparent;
+
+      color: #3333334d;
+    }
   }
 }
