--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -29,6 +29,24 @@
   background-color: #81b3d2;
 
   position: relative;
+
+  &:hover {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    background-color: #5496bd;
+  }
+
+  &:disabled {
+    background-color: #e5e5e5;
+  }
+}
+
+.social__link--vkontakte:active::before,
+.social__link--telegram:active::before,
+.social__link--youtube:active::before {
+  opacity: 0.3;
 }
 
 .social__link {
