--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,7 @@
 @import "./blocks/card.scss";
 @import "./blocks/presentation.scss";
 @import "./blocks/form.scss";
+@import "./blocks/feedback.scss";
 @import "./blocks/user-info.scss";
 @import "./blocks/grade.scss";
 @import "./blocks/grade-wrapper.scss";
