Пиксель перфект всех страниц

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -46,6 +46,10 @@
   &--secondary {
     max-width: 250px;
     margin: 0 auto;
+
+    @media (min-width: $desktop-width) {
+      max-width: 320px;
+    }
   }
 }
 
