--- a/source/sass/blocks/form-block.scss
+++ b/source/sass/blocks/form-block.scss
@@ -33,6 +33,29 @@
   padding: 0;
 
   list-style: none;
+
+  &--first {
+    margin-top: 1px;
+
+    @media (min-width: $tablet-width) {
+      margin-top: 0;
+      padding-left: 2px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-right: 60px;
+    }
+  }
+
+  &--second {
+    @media (min-width: $tablet-width) {
+      padding-left: 40px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-left: 64px;
+    }
+  }
 }
 
 .form-block__grade-list {
