--- a/source/sass/blocks/list-icon.scss
+++ b/source/sass/blocks/list-icon.scss
@@ -21,16 +21,6 @@
   }
 }
 
-.list-icon .advantages__description {
-  @media (min-width: $tablet-width) {
-    max-width: 170px;
-  }
-
-  @media (min-width: $desktop-width) {
-    max-width: 350px;
-  }
-}
-
 .list-icon__item {
   text-align: start;
 
@@ -77,7 +67,7 @@
     }
 
     @media (min-width: $desktop-width) {
-      padding-top: 135px;
+      padding-top: 150px;
     }
   }
 
@@ -89,14 +79,47 @@
     }
 
     @media (min-width: $desktop-width) {
-      padding-top: 120px;
+      padding-top: 165px;
     }
+  }
+}
+
+.list-icon__item--hotels .advantages__description,
+.list-icon__item--souvenirs .advantages__description {
+  @media (min-width: $tablet-width) {
+    max-width: 180px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 300px;
+  }
+}
+
+.list-icon__item--souvenirs br {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    display: inline;
+  }
+}
+
+.list-icon__item--souvenirs .advantages__description {
+  @media (min-width: $tablet-width) {
+    max-width: 180px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 250px;
   }
 }
 
 .list-icon__item--food .advantages__description {
   @media (min-width: $tablet-width) {
-    max-width: 155px;
+    max-width: 200px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 350px;
   }
 }
 
