--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -5,11 +5,6 @@
   z-index: 4;
 }
 
-.nav--nojs .nav__wrapper {
-  position: static;
-  min-height: 0;
-}
-
 .nav__wrapper {
   background-color: #81b3d2;
 
@@ -36,6 +31,11 @@
   }
 }
 
+.nav--nojs .nav__wrapper {
+  position: static;
+  min-height: 0;
+}
+
 .nav__toggle {
   position: absolute;
   right: 18px;
@@ -59,6 +59,10 @@
   @media (min-width: $tablet-width) {
     display: none;
   }
+}
+
+.nav--nojs .nav__toggle {
+  display: none;
 }
 
 .nav--closed .nav__toggle::before {
