--- a/source/sass/blocks/opinion.scss
+++ b/source/sass/blocks/opinion.scss
@@ -5,20 +5,23 @@
 }
 
 .opinion__field {
+  font-family: "PT Sans", "Tahoma", sans-serif;
+  font-style: normal;
+
   height: 150px;
   min-width: 280px;
 
-  padding: 16px;
+  padding: 15px;
+  margin-top: 24px;
 
-  position: relative;
-
-  margin-top: -7px;
+  resize: none;
 
   @media (min-width: $tablet-width) {
     min-width: 648px;
     height: 160px;
 
-    margin-top: 0;
+    padding: 20px 15px;
+    margin-top: 23px;
   }
 
   @media (min-width: $desktop-width) {
@@ -27,9 +30,8 @@
 }
 
 .opinion__field::placeholder {
-  position: absolute;
-  top: 20px;
+  color: #3333334d;
   white-space: pre-line;
 
-  letter-spacing: -1.4px;
+  letter-spacing: 0.1px;
 }
