--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -5,7 +5,7 @@
 
   &::before {
     position: absolute;
-    top: 50%;
+    top: 12px;
     left: -60px;
 
     width: 46px;
@@ -23,8 +23,8 @@
 
 .radio__input:checked + .radio__label::after {
   position: absolute;
-  top: 50%;
-  left: -47px;
+  top: 12px;
+  left: -45px;
 
   width: 16px;
   height: 16px;
