--- a/source/sass/blocks/user-info.scss
+++ b/source/sass/blocks/user-info.scss
@@ -5,11 +5,12 @@
 
   @media (min-width: $tablet-width) {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
-    gap: 90px;
 
-    margin: 30px 20px 17px;
+    margin: 30px auto 17px;
+
+    width: 648px;
 
     &::before {
       position: absolute;
@@ -22,13 +23,29 @@
       right: 50%;
 
       background-color: #dbdbdb;
+
+      @media (min-width: $desktop-width) {
+        right: 48.5%;
+      }
     }
   }
 
   @media (min-width: $desktop-width) {
-    margin: 6px 120px 21px;
+    margin: 6px auto 21px;
 
     justify-content: space-between;
+
+    width: 960px;
+  }
+}
+
+.user-info .form-block {
+  @media (min-width: $tablet-width) {
+    width: 319px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 465px;
   }
 }
 
@@ -57,6 +74,10 @@
 }
 
 .user-info .form-block:first-child {
+  @media (min-width: $desktop-width) {
+    width: 490px;
+  }
+
   &::before {
     top: -50px;
   }
@@ -77,5 +98,9 @@
 .user-info .input-text__field {
   @media (min-width: $tablet-width) {
     width: 277px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
   }
 }
