--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,3 +30,4 @@
 @import "./blocks/checkbox.scss";
 @import "./blocks/input-text.scss";
 @import "./blocks/opinion.scss";
+@import "./blocks/modal.scss";
