--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -50,3 +50,15 @@
     }
   }
 }
+
+.footer__copyright {
+  color: #000000;
+
+  &:hover {
+    color: #81b3d2;
+  }
+
+  &:active {
+    color: #b3b3b3;
+  }
+}
