--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -9,7 +9,7 @@
   overflow-wrap: break-word;
 
   max-width: 270px;
-  margin: 0;
+  margin: 0 auto;
   padding: 22px 0 0;
 
   text-transform: uppercase;
@@ -29,13 +29,13 @@
 
 .form__submit {
   text-align: end;
-  margin-bottom: 17px;
+  margin: 0 20px 17px;
 
   display: flex;
   flex-direction: column;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 63px;
+    margin: 0 0 63px;
 
     flex-direction: row;
     align-items: baseline;
@@ -81,8 +81,12 @@
 }
 
 .form__note {
+  margin-top: 5px;
+  text-transform: uppercase;
+
+  font-size: 12px;
+
   @media (min-width: $tablet-width) {
     @include regular-text(400);
-    text-transform: uppercase;
   }
 }
