--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -8,7 +8,7 @@
 
   background-image: url("../img/hero-mobile.jpg");
   background-position: center;
-  background-color: #82b3d3;
+  background-color: #25343f;
   background-repeat: no-repeat;
   background-size: cover;
 
