--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -21,6 +21,15 @@
   }
 }
 
+.radio__label:hover::before,
+.radio__input:focus + .radio__label::before {
+  background-color: #e5e5e5;
+}
+
+.radio__label:active::before {
+  background-color: #d5d5d5;
+}
+
 .radio__input:checked + .radio__label::after {
   position: absolute;
   top: 12px;
@@ -34,4 +43,8 @@
 
   border-radius: 50%;
   background-color: #333333;
+}
+
+.radio__input:checked + .radio__label:active::after {
+  opacity: 0.3;
 }
