--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -34,6 +34,10 @@
     background-color: #669ec0;
   }
 
+  &:focus-within {
+    background-color: #669ec0;
+  }
+
   &:active {
     background-color: #5496bd;
   }
