--- a/source/sass/blocks/user-info.scss
+++ b/source/sass/blocks/user-info.scss
@@ -1,8 +1,6 @@
 .user-info {
   position: relative;
 
-  margin: 0 20px;
-
   @media (min-width: $tablet-width) {
     display: flex;
     justify-content: space-between;
@@ -40,12 +38,18 @@
 }
 
 .user-info .form-block {
+  padding: 0 20px 45px;
+
   @media (min-width: $tablet-width) {
     width: 319px;
+
+    padding: 0 0 48px;
   }
 
   @media (min-width: $desktop-width) {
     width: 465px;
+
+    padding-bottom: 51px;
   }
 }
 
