--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -29,22 +29,22 @@
   background-color: #81b3d2;
 
   position: relative;
+}
 
-  &:hover {
-    background-color: #669ec0;
-  }
+.social__item:hover {
+  background-color: #669ec0;
+}
 
-  &:focus-within {
-    background-color: #669ec0;
-  }
+.social__item:focus-within {
+  background-color: #669ec0;
+}
 
-  &:active {
-    background-color: #5496bd;
-  }
+.social__item:active {
+  background-color: #5496bd;
+}
 
-  &:disabled {
-    background-color: #e5e5e5;
-  }
+.social__item:disabled {
+  background-color: #e5e5e5;
 }
 
 .social__link--vkontakte:active::before,
