--- a/source/sass/blocks/opinion.scss
+++ b/source/sass/blocks/opinion.scss
@@ -1,4 +1,4 @@
-.opinion .input-text {
+/* .opinion .input-text {
   @media (min-width: $tablet-width) {
     margin-top: 26px;
   }
@@ -35,3 +35,4 @@
 
   letter-spacing: 0.1px;
 }
+ */
